...
                                        <connections>
                                            <action selector="cancelButtonTapped:" destination="4X6-0B-sTT" eventType="touchUpInside" id="7Uq-gr-f1V"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EAc-sx-A9A">
                                        <rect key="frame" x="349" y="0.0" width="45" height="30"/>
                                        <state key="normal" title="sign in"/>
                                        <connections>
                                            <action selector="signInButtonTapped:" destination="4X6-0B-sTT" eventType="touchUpInside" id="QDp-y3-El8"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[a very long status message that will cause multiple lines in the label]" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizing
                                        <rect key="frame" x="69" y="179" width="276" height="80"/>
...
                            <constraint firstItem="R4G-dK-41Q" firstAttribute="top" secondItem="76D-eP-xhF" secondAttribute="bottom" constant="20" id="fTr-W7-2bK"/>
                            <constraint firstItem="wxN-12-RVl" firstAttribute="trailing" secondItem="Qhh-7d-UFG" secondAttribute="trailing" constant="20" id="vTp-rY-ET3"/>
                            <constraint firstItem="R4G-dK-41Q" firstAttribute="bottom" secondItem="wxN-12-RVl" secondAttribute="bottom" id="zFE-D9-WPb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="wxN-12-RVl"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="rDv-8R-x5p">
                        <barButtonItem key="leftBarButtonItem" title="sign out" id="bdb-mD-Acs">
                            <connections>
                                <action selector="signOutButtonTapped:" destination="HUc-pl-J5d" id="Et0-OK-caQ"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="AcO-FP-Fhd">
                            <connections>
...
                                <connections>
                                    <action selector="cancelButtonTapped:" destination="vtW-pn-U5g" eventType="touchUpInside" id="HHp-IL-uYO"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VEa-S0-H61">
                                <rect key="frame" x="362" y="44" width="32" height="30"/>
                                <state key="normal" title="save"/>
                                <connections>
                                    <action selector="saveButtonTapped:" destination="vtW-pn-U5g" eventType="touchUpInside" id="Uar-9C-FjQ"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="g9j-O2-jrB">
                                <rect key="frame" x="20.666666666666657" y="172.66666666666663" width="372.66666666666674" height="225"/>
...
